Add constant MAX_DISPLAYED_CHARS

--- a/src/app/private/scenarist/archives/directives.tmpl/list.html
+++ b/src/app/private/scenarist/archives/directives.tmpl/list.html
@@ -4,8 +4,8 @@
         class="card__description" 
         ng-class="  {true:'card__description--two-lines', false:'card__description--three-lines'}[scenario.comments == null || scenario.comments == '']" >
         <div class="line">{{scenario.createdTime | date:"dd.MM.yyyy"}}</div>
-        <div class="line line--primary">{{scenario.name | limitTo: 36}}<span ng-if="scenario.comments.length > 36">...</span></div>
-        <div ng-if="!((scenario.comments == null) || (scenario.comments == ''))" class="line line--optionnal">{{scenario.comments | limitTo: 36}}<span ng-if="scenario.comments.length > 36">...</span></div>
+        <div class="line line--primary">{{scenario.name | limitTo: MAX_DISPLAYED_CHARS}}<span ng-if="scenario.comments.length > MAX_DISPLAYED_CHARS">...</span></div>
+        <div ng-if="!((scenario.comments == null) || (scenario.comments == ''))" class="line line--optionnal">{{scenario.comments | limitTo: MAX_DISPLAYED_CHARS}}<span ng-if="scenario.comments.length > MAX_DISPLAYED_CHARS">...</span></div>
     </div>
     <div class="card__actions">
         <a class="button button--medium button--round button--default-reverse button--label-off button--undo" title="Move to current scenarios" ng-click="unarchive(scenario)">
