--- a/src/app/private/trainer/customize/directives.tmpl/index.html
+++ b/src/app/private/trainer/customize/directives.tmpl/index.html
@@ -1,6 +1,6 @@
 <div class="modal__header">
 	<div class="modal__illustration illustration illustration--medium illustration--icon" illustration="ICON_{{customizeIndexCtrl.infos.color}}_{{customizeIndexCtrl.infos.icon}}"></div>
-	<h5 class="modal__title">{{customizeIndexCtrl.session.name | limitTo: 36}}<span ng-if="customizeIndexCtrl.session.name.length > 36">...</span></h5>
+	<h5 class="modal__title">{{customizeIndexCtrl.session.name | limitTo: customizeIndexCtrl.MAX_DISPLAYED_CHARS}}<span ng-if="customizeIndexCtrl.session.name.length > customizeIndexCtrl.MAX_DISPLAYED_CHARS">...</span></h5>
 	<a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="close()">
    		<span class="button__label">Close</span>
 	</a>
