--- a/src/app/private/trainer/settings/settings.tmpl.html
+++ b/src/app/private/trainer/settings/settings.tmpl.html
@@ -1,2 +1,2 @@
-<div class="modal modal--customize" trainer-sessions-settings-index close="modalsCtrl.close()"></div>
+<div class="modal modal--settings" trainer-sessions-settings-index close="modalsCtrl.close()"></div>
 <div class="shadow" ng-click="modalsCtrl.close()"></div>
