--- a/src/assets/sass/objects/_modal.scss
+++ b/src/assets/sass/objects/_modal.scss
@@ -302,7 +302,7 @@
 		}
 	}
 
-	&.modal--customize{
+	&.modal--settings{
 		.modal__content{
         	@include make-row(0px);
         	padding:0px;
