Scenarist - "Customize session" to "Settings"

--- a/src/app/private/scenarist/directives.tmpl/card.html
+++ b/src/app/private/scenarist/directives.tmpl/card.html
@@ -6,8 +6,8 @@
   <div ng-if="!((scenario.comments == null) || (scenario.comments == ''))" class="line line--optional">{{scenario.comments | limitTo: MAX_DISPLAYED_CHARS}}<span ng-if="scenario.comments.length > MAX_DISPLAYED_CHARS">...</span></div>  
 </div>
 <div class="card__actions">
-  <a class="button button--medium button--round button--default-reverse button--label-off button--customize" title="Customize session" ui-sref=".customize({scenarioId: scenario.id})">
-    <span class="button__label">Customize scenario</span>
+  <a class="button button--medium button--round button--default-reverse button--label-off button--settings" title="Settings" ui-sref=".settings({scenarioId: scenario.id})">
+    <span class="button__label">Settings</span>
   </a>
   <a class="button button--medium button--round button--default-reverse button--label-off button--user" title="Manage users" ui-sref=".coscenarists({scenarioId: scenario.id})">
     <span class="button__label">Manage User</span>
