--- a/src/app/private/scenarist/history/directives.tmpl/card.html
+++ b/src/app/private/scenarist/history/directives.tmpl/card.html
@@ -9,7 +9,7 @@
 
 
 <div class="card__actions">
-    <a class="button button--medium button--round button--default-reverse button--label-off button--fork" title="Create a scenario from this version"  ng-click="createFork(version.name)">
+    <a class="button button--medium button--round button--default-reverse button--label-off button--repeat" title="Create a scenario from this version"  ng-click="createFork(version.name)">
       <span class="button__label">Create a scenario from this version</span>
     </a>
     <a class="button button--medium button--round button--default-reverse button--label-off button--trash" title="Delete this history" ng-click="deleteFork(version.name)">
