--- a/src/app/private/scenarist/settings/directives.tmpl/index.html
+++ b/src/app/private/scenarist/settings/directives.tmpl/index.html
@@ -1,3 +1,5 @@
+
+<!-- Modal header -->
 <div class="modal__header">
 	<div class="modal__illustration illustration illustration--medium illustration--icon" illustration="ICON_{{settingsIndexCtrl.infos.color}}_{{settingsIndexCtrl.infos.icon}}"></div>
 	<h5 class="modal__title">{{settingsIndexCtrl.scenario.name | limitTo: settingsIndexCtrl.MAX_DISPLAYED_CHARS}}<span ng-if="settingsIndexCtrl.scenarios.name.length > settingsIndexCtrl.MAX_DISPLAYED_CHARS">...</span></h5>
@@ -5,34 +7,54 @@
    		<span class="button__label">Close</span>
 	</a>
 </div>
-<div class="modal__nav modal__nav--2tab">
-   	<a 	class="modal__nav__tab modal__nav__tab--left" 
+
+<!-- Modal tabs -->
+<div class="modal__nav modal__nav--3tab">
+   	<a 	class="modal__nav__tab modal__nav__tab--left"
    		ng-class="{'modal__nav__tab--active': settingsIndexCtrl.tabs.infos}"
-   		ng-click="settingsIndexCtrl.activeTab('infos')">Infos</a> 
-   	<a 	class="modal__nav__tab modal__nav__tab--right"  
+   		ng-click="settingsIndexCtrl.activeTab('infos')">Infos</a>
+   	<a 	class="modal__nav__tab modal__nav__tab--middle"
    		ng-class="{'modal__nav__tab--active': settingsIndexCtrl.tabs.display}"
-   		ng-click="settingsIndexCtrl.activeTab('display')">Icons & colors</a> 
+   		ng-click="settingsIndexCtrl.activeTab('display')">Icons & colors</a>
+    <a  class="modal__nav__tab modal__nav__tab--right"
+        ng-class="{'modal__nav__tab--active': settingsIndexCtrl.tabs.advanced}"
+        ng-click="settingsIndexCtrl.activeTab('advanced')"><i class="fa fa-exclamation-triangle"></i> Advanced</a>
 </div>
-<div 	ng-if="settingsIndexCtrl.tabs.infos" 
-		class="modal__content"
-		active-infos="settingsIndexCtrl.infos"
-		check-change="settingsIndexCtrl.checkChanges"
-		scenarist-customize-infos>
-</div>
-<div 	ng-if="settingsIndexCtrl.tabs.display" class="modal__content">
-	<div 
-		class="modal__content__colors"
-		active-color="settingsIndexCtrl.infos.color" 
-		change="settingsIndexCtrl.changeColor" 
-		scenarist-customize-colors>	
-	</div>
-	<div 
-		class="modal__content__icons"
-		active-icon="settingsIndexCtrl.infos.icon" 
-		change="settingsIndexCtrl.changeIcon"
-		scenarist-customize-icons >	
-	</div>
-</div>
+
+
+<!-- Modal content -->
+    <!-- Basic informations -->
+    <div 	ng-if="settingsIndexCtrl.tabs.infos"
+    		class="modal__content"
+    		active-infos="settingsIndexCtrl.infos"
+    		check-change="settingsIndexCtrl.checkChanges"
+    		scenarist-customize-infos>
+    </div>
+    <!-- Icon & Color -->
+    <div 	ng-if="settingsIndexCtrl.tabs.display" class="modal__content">
+    	<div
+    		class="modal__content__colors"
+    		active-color="settingsIndexCtrl.infos.color"
+    		change="settingsIndexCtrl.changeColor"
+    		scenarist-customize-colors>
+    	</div>
+    	<div
+    		class="modal__content__icons"
+    		active-icon="settingsIndexCtrl.infos.icon"
+    		change="settingsIndexCtrl.changeIcon"
+    		scenarist-customize-icons >
+    	</div>
+    </div>
+    <!-- Advanced -->
+    <div    ng-if="settingsIndexCtrl.tabs.advanced"
+            class="modal__content"
+            active-infos="settingsIndexCtrl.infos"
+            check-change="settingsIndexCtrl.checkChanges"
+            scenarist-customize-advanced>
+    </div>
+
+
+<!-- Modal tools -->
 <div class="modal__tools">
 	<p ng-if="settingsIndexCtrl.hasChanges.all" class="modal__tools__message"><i class="fa fa-warning"></i> Some changes aren't saved</p>
 	<a class="modal__tools__button button button--small button--success" ng-click="settingsIndexCtrl.save()">
