Align Player WS to Trainer and Scenarist WS structure

--- a/src/app/private/player/directives.tmpl/card.html
+++ b/src/app/private/player/directives.tmpl/card.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 <div class="card__actions">
-    <a ng-if="!session.properties.freeForAll" class="button button--medium button--round button--default-reverse button--label-off button--team" title="View team" ui-sref="wegas.private.player.sessions.team({id: session.id})">
+    <a ng-if="!session.properties.freeForAll" class="button button--medium button--round button--default-reverse button--label-off button--team" title="View team" ui-sref="wegas.private.player.team({id: session.id})">
       <span class="button__label">View team</span>
     </a> 
     <a 
