--- a/src/app/private/player/join-team/directives.tmpl/index.html
+++ b/src/app/private/player/join-team/directives.tmpl/index.html
@@ -13,6 +13,7 @@
 	ng-class="{true: 'modal__content--nav-off', false: 'modal__content--nav-tools-off'}[playerSessionJoinCtrl.newTeam]"
 	teams="playerSessionJoinCtrl.sessionToJoin.teams"
 	join-team="playerSessionJoinCtrl.joinTeam"
+	new-team="playerSessionJoinCtrl.newTeam"
 	player-session-teams-list >
 </div>
 <div 
