--- a/src/app/private/player/join-team/directives.tmpl/teams-list.html
+++ b/src/app/private/player/join-team/directives.tmpl/teams-list.html
@@ -1,3 +1,5 @@
+<p ng-if="!newTeam && teams.length >= 1">Join an existing team</p>
+<p ng-if="newTeam && teams.length >= 1">Join an existing team or create a new team</p>
 <div 
 	class="card card--medium card--users" 
 	ng-repeat="team in teams track by team.id" 
