--- a/src/app/private/scenarist/directives.tmpl/list.html
+++ b/src/app/private/scenarist/directives.tmpl/list.html
@@ -4,6 +4,6 @@
       archive="archive"
       scenario-card >
 </div>
-<div ng-if="(scenarios | filter:{name: search}).length == 0">
+<div ng-if="(search !== '') && (scenarios | filter:{name: search}).length == 0">
     No current scenario with the name "{{search}}"
 </div>
