Align Profile on other private structures

--- a/src/app/private/profile/directives.tmpl/index.html
+++ b/src/app/private/profile/directives.tmpl/index.html
@@ -1,7 +1,7 @@
 <div class="modal__header">
   <div class="modal__illustration illustration illustration--medium illustration--icon" illustration="ICON_orange_user"></div>
-  <h5 class="modal__title">Hello {{ originalUsername }}</h5>
-  <a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="modalsCtrl.close()">
+  <h5 class="modal__title">{{originalUsername}}</h5>
+  <a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="close()">
     <span class="button__label">Close</span>
   </a>
 </div>
