- fixing bug when displaying versions from list

--- a/src/app/private/scenarist/history/directives.tmpl/actions.html
+++ b/src/app/private/scenarist/history/directives.tmpl/actions.html
@@ -1,3 +1,4 @@
+-{{ scenario.id }}-
 <div class="col-xs-8">
     <a class="button button--small button--fork" title="This actions will store a new version of the scenario. The version can be restored as a new scenario.">
         <span class="button__label" ng-click="addVersion()">New version</span>
@@ -7,6 +8,6 @@
     </a>
 </div>
 <div class="col-xs-4">
-    <a class="button button--small button--download" scenarist-history-download-pdf>PDF</a>
-    <a class="button button--small button--download" scenarist-history-download-json>JSON</a>
+    <a class="button button--small button--download" scenarist-history-download-pdf scenario="scenario">PDF</a>
+    <a class="button button--small button--download" scenarist-history-download-json scenario="scenario">JSON</a>
 </div>
