--- a/src/app/private/scenarist/history/directives.tmpl/index.html
+++ b/src/app/private/scenarist/history/directives.tmpl/index.html
@@ -1,11 +1,11 @@
 <div class="modal__header">
-  <div class="modal__illustration illustration illustration--medium illustration--icon" illustration="{{scenario.properties.iconUri}}"></div>
-  <h5 class="modal__title">{{scenario.name}}</h5>
-  <a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="modalsCtrl.close()">
+  <div class="modal__illustration illustration illustration--medium illustration--icon" illustration="{{scenaristHistoryIndexCtrl.scenario.properties.iconUri}}"></div>
+  <h5 class="modal__title">{{scenaristHistoryIndexCtrl.scenario.name}}</h5>
+  <a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="close()">
     <span class="button__label">Close</span>
   </a>
 </div>
 
 <div class="modal__content modal__content--nav-off" scenarist-history-list></div>
 
-<div class="modal__tools" scenarist-history-actions></div>
+<div class="modal__tools" scenarist-history-actions scenario="scenaristHistoryIndexCtrl.scenario"></div>
