Player Show Team : Add refresh action

--- a/src/app/private/player/team/directives.tmpl/index.html
+++ b/src/app/private/player/team/directives.tmpl/index.html
@@ -1,5 +1,5 @@
 <div class="modal__header">
-	<div class="modal__illustration illustration illustration--medium illustration--icon" illustration="{{playerSessionTeamCtrl.playedSession.properties.iconUri}}"></div>
+	<div class="modal__illustration illustration illustration--medium illustration--icon" illustration="{{playerSessionTeamCtrl.session.properties.iconUri}}"></div>
 	<h5 class="modal__title">
 		{{playerSessionTeamCtrl.team.name | limitTo : 36}}
       	<span ng-if="playerSessionTeamCtrl.team.name.length > 36">...</span>
@@ -9,7 +9,14 @@
 	</a>
 </div>
 <div 
-	class="modal__content modal__content--nav-tools-off" 
+	class="modal__content modal__content--nav-off" 
 	players="playerSessionTeamCtrl.team.players"
 	player-session-team-players-list >
+</div>
+<div class="modal__tools">
+	<div class="col-xs-3 col-xs-push-9">
+		<a class="button button--label-off button--refresh" title="Reload" ng-click="playerSessionTeamCtrl.refreshSession()">
+	    	<span class="button__label">Reload</span>
+	    </a>
+	</div>
 </div>
