--- a/src/app/private/scenarist/coscenarists/directives.tmpl/index.html
+++ b/src/app/private/scenarist/coscenarists/directives.tmpl/index.html
@@ -1,12 +1,12 @@
 
 <div class="modal__header">
-  <div class="modal__illustration illustration illustration--medium illustration--icon" illustration="{{scenario.properties.iconUri}}"></div>
-  <h5 class="modal__title">{{scenario.name}}</h5>
-  <a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="modalsCtrl.close()">
+  <div class="modal__illustration illustration illustration--medium illustration--icon" illustration="{{scenaristCoscenaristsIndexCtrl.scenario.properties.iconUri}}"></div>
+  <h5 class="modal__title">{{scenaristCoscenaristsIndexCtrl.scenario.name}}</h5>
+  <a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="close()">
     <span class="button__label">Close</span>
   </a>
 </div>
 
-<div class="modal__content modal__content--nav-off" scenarist-coscenarists-list permissions="permissions"></div>
+<div class="modal__content modal__content--nav-off" scenarist-coscenarists-list scenario="scenaristCoscenaristsIndexCtrl.scenario" permissions="scenaristCoscenaristsIndexCtrl.permissions"></div>
 
-<div class="modal__tools" scenarist-coscenarists-add></div>
+<div class="modal__tools" scenarist-coscenarists-add scenario="scenaristCoscenaristsIndexCtrl.scenario"></div>
