Fix : Correction HTTP SendNewPassword

--- a/src/app/public/password/directives.tmpl/index.html
+++ b/src/app/public/password/directives.tmpl/index.html
@@ -7,7 +7,7 @@
 <div class="modal__content--nav-tools-off view">
 	<form class="view__password-form form" ng-submit="publicPasswordCtrl.remindPassword()">
 	  	<div class="form__row">
-	      	<input class="form__row__entry input input--secondary" ng-model="publicPasswordCtrl.formInfo.email" type="text" id="login" placeholder="Type your email or your username" autocomplete="off">
+	      	<input class="form__row__entry input input--secondary" ng-model="publicPasswordCtrl.formInfo.email" type="text" id="login" placeholder="Type your email" autocomplete="off">
 	  	</div>
 	  	<div class="form__row form__row--right">
   		    <input class="form__row__btn button button--default" type="submit" value="Send me a new password" />
