- Use the directive

--- a/src/app/private/scenarist/directives.tmpl/create.html
+++ b/src/app/private/scenarist/directives.tmpl/create.html
@@ -8,7 +8,12 @@
     <select class="form__row__entry input input--small" ng-model="newScenario.templateId">
         <option value="0">Based on scenario</option>
         <option ng-repeat="scenario in scenarios | filter: { canDuplicate: true }" value="{{scenario.id}}">{{scenario.name}}</option>
+        <option value="upload">Upload from JSON</option>
+        option
     </select>
+  </div>
+  <div class="form__row fade" ng-if="newScenario.templateId == 'upload'">
+    <input id="import-json-scenario" type="file" value="upload a scenario" scenarist-scenario-create-upload />
   </div>
   <div class="form__row form__row--right">
     <input class="form__row__btn button button--default" type="submit" value="Create" />
