--- a/src/app/private/admin/groups/edit/edit.tmpl.html
+++ b/src/app/private/admin/groups/edit/edit.tmpl.html
@@ -1,2 +1,2 @@
-<div class="modal" close="modalsCtrl.close()" admin-groups-edit-index></div>
+<div class="modal modal--admin-groups" close="modalsCtrl.close()" admin-groups-edit-index></div>
 <div class="shadow" ng-click="modalsCtrl.close()"></div>
