--- a/src/assets/sass/objects/_modal.scss
+++ b/src/assets/sass/objects/_modal.scss
@@ -297,6 +297,12 @@
 		}
 	}
 
+	&.modal--admin-groups{
+		.form{
+			padding:0px;
+		}
+	}
+
 	&.modal--settings{
 		.modal__content{
         	@include make-row(0px);
