Archive Button spaces

--- a/src/app/private/scenarist/directives.tmpl/index.html
+++ b/src/app/private/scenarist/directives.tmpl/index.html
@@ -30,7 +30,7 @@
 	</div>
 	<div ng-if="scenaristIndexCtrl.archives.length" class="view__archives">
 		<a class="button button--small button--default button--archive" ui-sref=".archives">
-			<span class="button__label">{{scenaristIndexCtrl.archives.length}} archives</span>
+			<span class="button__label">{{scenaristIndexCtrl.archives.length}} &nbsp; archives</span>
 		</a>
 	</div>
 
