--- a/src/app/private/trainer/directives.tmpl/index.html
+++ b/src/app/private/trainer/directives.tmpl/index.html
@@ -28,7 +28,7 @@
 	</div>
 	<div ng-if="(!trainerIndexCtrl.loading.all) && (trainerIndexCtrl.archives.length)" class="view__archives">
 		<a class="button button--small button--default button--archive" ui-sref=".archives">
-			<span class="button__label">{{trainerIndexCtrl.archives.length}} archives</span>
+			<span class="button__label">{{trainerIndexCtrl.archives.length}} &nbsp; archives</span>
 		</a>
 	</div>
 	<div 
