--- a/src/assets/sass/objects/_loading-bar.scss
+++ b/src/assets/sass/objects/_loading-bar.scss
@@ -17,7 +17,7 @@ div#loading-bar .bar {
 	left:0!important;
 	width:100%;
 	height:100%;
-	background-color:rgba(#999999, 0.4);
+	background-color:rgba(#cccccc, 0.4);
 	.spinner-icon {
 		display:block;
 		position:absolute;
@@ -48,6 +48,6 @@ div#loading-bar .bar {
 		width:280px;
 		margin:40px 0 0 -140px;
 		text-align:center;
-		color:white;
+		color:#888888;
 	}
 }
