--- a/src/assets/sass/objects/_loading-bar.scss
+++ b/src/assets/sass/objects/_loading-bar.scss
@@ -17,16 +17,16 @@ div#loading-bar .bar {
 	left:0!important;
 	width:100%;
 	height:100%;
-	background-color:rgba(#cccccc, 0.4);
+	background-color:none;
 	.spinner-icon {
 		display:block;
 		position:absolute;
-		top:50%;
+		top:12px;
 		left:50%;
+		margin-left:48px;
 		border-radius:50% !important;
-		margin:-25px 0 0 -25px !important;
-		width: 50px !important;
-	  	height: 50px !important;
+		width: 32px !important;
+	  	height: 32px !important;
 
 		border:  solid 8px transparent;
 		border-top-color:  lighten($secondary-color, 10%);
@@ -43,11 +43,14 @@ div#loading-bar .bar {
 		content:"Please wait";
 		display:block;
 		position:absolute;
-		top:50%;
-		left:50%;
-		width:280px;
-		margin:40px 0 0 -140px;
-		text-align:center;
-		color:#888888;
+		top:12px !important;
+		left:50% !important; 
+		right:auto !important;
+		margin:0 0 0 -84px !important;
+		padding:8px 0px !important;
+		width:120px !important;
+		height:16px !important;
+		text-align:right;
+		color:$secondary-color;
 	}
 }
