Add icons - fontello

--- a/src/assets/sass/objects/_modal.scss
+++ b/src/assets/sass/objects/_modal.scss
@@ -308,7 +308,7 @@
         	@include make-row(0px);
         	padding:0px;
         	margin:0px;
-			.icon{
+			.icon--chooser{
 				float:left;
 				margin: 0 7px;
 				border:solid 0px white;
