--- a/src/assets/sass/plugins/_plugins.scss
+++ b/src/assets/sass/plugins/_plugins.scss
@@ -18,6 +18,18 @@
 @import "bootstrap/tables";
 
 // ---------------------------
+// Plugin Fontello
+// ---------------------------
+
+/*!
+ *  Copyright (C) 2012 by Fontello project
+ *  Author:    Crowdsourced, for Fontello project
+ *  License:   SIL (http://scripts.sil.org/OFL)
+ *  Homepage:  http://fontello.com
+ */
+@import "fontello/fontello";
+
+// ---------------------------
 // Plugin Font Awesome
 // ---------------------------
 
