--- a/src/app/private/trainer/settings/directives.tmpl/index.html
+++ b/src/app/private/trainer/settings/directives.tmpl/index.html
@@ -1,5 +1,5 @@
 <div class="modal__header">
-	<div class="modal__illustration illustration illustration--medium illustration--icon" illustration="ICON_{{settingsIndexCtrl.infos.color}}_{{settingsIndexCtrl.infos.icon}}"></div>
+	<div class="modal__illustration illustration illustration--medium illustration--icon" illustration="ICON_{{settingsIndexCtrl.infos.color}}_{{settingsIndexCtrl.infos.icon.key}}_{{settingsIndexCtrl.infos.icon.library}}"></div>
 	<h5 class="modal__title">{{settingsIndexCtrl.session.name | limitTo: settingsIndexCtrl.MAX_DISPLAYED_CHARS}}<span ng-if="settingsIndexCtrl.session.name.length > settingsIndexCtrl.MAX_DISPLAYED_CHARS">...</span></h5>
 	<a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="close()">
    		<span class="button__label">Close</span>
