--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -66,14 +66,97 @@ $backgrounds-levels : (
 	(top, $background-white, $primary-color)
 );
 $illustration-colors : (
+	('white-orange', lighten(#FF9369, 10%)), 
+	('light-orange', lighten(#FF9369, 6%)), 
 	('orange', #FF9369), 
-	('blue', #A2E0F2), 
+	('dark-orange', darken(#FF9369, 10%)), 
+	('black-orange', darken(#FF9369, 20%)),
+
+	('white-orangine', lighten(#FFB93C, 10%)), 
+	('light-orangine', lighten(#FFB93C, 6%)), 
+	('orangine', #FFB93C), 
+	('dark-orangine', darken(#FFB93C, 10%)), 
+	('black-orangine', darken(#FFB93C, 20%)),
+
+	('white-greenyellow', lighten(#AAFF5F, 10%)), 
+	('light-greenyellow', lighten(#AAFF5F, 6%)), 
+	('greenyellow', #AAFF5F), 
+	('dark-greenyellow', darken(#AAFF5F, 10%)), 
+	('black-greenyellow', darken(#AAFF5F, 20%)),
+
+	('white-bluepurple', lighten(#ADA8FF, 10%)), 
+	('light-bluepurple', lighten(#ADA8FF, 6%)), 
+	('bluepurple', #ADA8FF), 
+	('dark-bluepurple', darken(#ADA8FF, 10%)), 
+	('black-bluepurple', darken(#ADA8FF, 20%)),
+
+	('white-wine', lighten(#B0747A, 10%)), 
+	('light-wine', lighten(#B0747A, 6%)), 
+	('wine', #B0747A), 
+	('dark-wine', darken(#B0747A, 10%)), 
+	('black-wine', darken(#B0747A, 20%)),
+
+	('white-ocean', lighten(#90ACFF, 10%)), 
+	('light-ocean', lighten(#90ACFF, 6%)), 
+	('ocean', #90ACFF), 
+	('dark-ocean', darken(#90ACFF, 10%)), 
+	('black-ocean', darken(#90ACFF, 20%)), 
+
+	('white-greenblue', lighten(#6BB28A, 10%)), 
+	('light-greenblue', lighten(#6BB28A, 6%)), 
+	('greenblue', #6BB28A), 
+	('dark-greenblue', darken(#6BB28A, 10%)), 
+	('black-greenblue', darken(#6BB28A, 20%)), 
+
+	('white-blue', lighten(#A2E0F2, 10%)), 
+	('light-blue', lighten(#A2E0F2, 6%)), 
+	('blue', #A2E0F2),
+	('dark-blue', darken(#A2E0F2, 10%)), 
+	('black-blue', darken(#A2E0F2, 20%)), 
+	
+	('white-brown', lighten(#B2957C, 10%)), 
+	('light-brown', lighten(#B2957C, 6%)),
+	('brown', #B2957C),
+	('dark-brown', darken(#B2957C, 10%)), 
+	('black-brown', darken(#B2957C, 20%)), 
+
+	('white-red', lighten(#FF5E5E, 10%)), 
+	('light-red', lighten(#FF5E5E, 6%)), 
 	('red', #FF5E5E), 
+	('dark-red', darken(#FF5E5E, 10%)), 
+	('black-red', darken(#FF5E5E, 20%)), 
+
+	('white-yellow', lighten(#EDE466, 10%)), 
+	('light-yellow', lighten(#EDE466, 6%)), 
 	('yellow', #EDE466), 
+	('dark-yellow', darken(#EDE466, 10%)), 
+	('black-yellow', darken(#EDE466, 20%)), 
+
+	('white-purple', lighten(#DFB2FF, 10%)), 
+	('light-purple', lighten(#DFB2FF, 6%)), 
 	('purple', #DFB2FF),
+	('dark-purple', darken(#DFB2FF, 10%)), 
+	('black-purple', darken(#DFB2FF, 20%)), 
+
+	('white-pink', lighten(#FF96D2, 10%)), 
+	('light-pink', lighten(#FF96D2, 6%)), 
 	('pink', #FF96D2), 
+	('dark-pink', darken(#FF96D2, 10%)), 
+	('black-pink', darken(#FF96D2, 20%)), 
+
+	('white-green', lighten(#BEED79, 10%)), 
+	('light-green', lighten(#BEED79, 6%)), 
 	('green', #BEED79), 
-	('grey', #AEAAB2)
+	('dark-green', darken(#BEED79, 10%)), 
+	('black-green', darken(#BEED79, 20%)), 
+
+	('white-grey', lighten(#AEAAB2, 10%)), 
+	('light-grey', lighten(#AEAAB2, 6%)), 
+	('grey', #AEAAB2),
+	('dark-grey', darken(#AEAAB2, 10%)), 
+	('black-grey', darken(#AEAAB2, 20%))
+
+
 ); 
 
 
