--- a/src/assets/sass/objects/_modal.scss
+++ b/src/assets/sass/objects/_modal.scss
@@ -337,7 +337,9 @@
 			}
 			.color{
 				float: left;
-				margin: 16px;
+				margin: 0px;
+				width:32px;
+				height:32px;
 				border: 0px;
 				transition: .3s;
 
