--- a/src/app/private/admin/users/users.tmpl.html
+++ b/src/app/private/admin/users/users.tmpl.html
@@ -10,22 +10,22 @@
     </div>
 </div>
 <div class="view__list" repeat-auto-load>
-    <div class="card card--big card--player-session" ng-repeat="user in adminUsersCtrl.users | filter: {account: { email: adminUsersCtrl.search }} | limitTo: adminUsersCtrl.maxUsersDisplayed" user="user" >
+    <div class="card card--medium card--player-session" ng-repeat="user in adminUsersCtrl.users | filter: adminUsersCtrl.search | limitTo: adminUsersCtrl.maxUsersDisplayed" user="user" >
 
-        <div class="card__illustration illustration illustration--big illustration--icon" illustration="ICON_grey_user"></div>
-        <div class="card__description">
+        <div class="card__illustration illustration illustration--medium illustration--icon" illustration="ICON_grey_user"></div>
+        <div class="card__description card__description--two-lines">
             <div class="line line--primary">
-                {{ user.account.email }}
+                User N°{{user.id}} - {{ user.account.email }}
             </div>
             <div class="line line--secondary">
-                {{ user.account.firstname + ' ' + user.account.lastname }}
+                {{ user.account.firstname + ' ' + user.account.lastname }} <span ng-if="user.account.username !== ''">({{user.account.username}})</span>
             </div>
         </div>
         <div class="card__actions">
-            <a class="button button--medium button--round button--default-reverse button--label-off button--customize" title="Edit user" ui-sref="wegas.private.admin.users.edit({id: user.id})">
+            <a class="button button--small button--round button--default-reverse button--label-off button--customize" title="Edit user" ui-sref="wegas.private.admin.users.edit({id: user.id})">
                 <span class="button__label">Edit user</span>
             </a>
-            <a class="button button--medium button--round button--danger-reverse button--label-off button--trash" title="Delete User" confirmed-click="adminUsersCtrl.deleteUser(user.id)" ng-confirm-click="Are you sure you want to delete this user ? This action is irreversible.">
+            <a class="button button--small button--round button--danger-reverse button--label-off button--trash" title="Delete User" confirmed-click="adminUsersCtrl.deleteUser(user.id)" ng-confirm-click="Are you sure you want to delete this user ? This action is irreversible.">
                 <span class="button__label">Delete user</span>
             </a>
         </div>
