--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -20,7 +20,7 @@ $secondary-color-dark:#38B6D9;
 $background-default:#f0f0f0; // ebebeb; A remplacer par lvl bottom
 $background-default-secondary:#F9F9F9;
 $background-white:$white;
-
+$albasim-color:#a68f81;
 
 
 $background-reverse:$primary-color; // Remplacer par top
