--- a/src/app/private/trainer/settings/directives.tmpl/index.html
+++ b/src/app/private/trainer/settings/directives.tmpl/index.html
@@ -6,34 +6,36 @@
 	</a>
 </div>
 <div class="modal__nav modal__nav--2tab">
-   	<a 	class="modal__nav__tab modal__nav__tab--left" 
+   	<a 	class="modal__nav__tab modal__nav__tab--left"
    		ng-class="{'modal__nav__tab--active': settingsIndexCtrl.tabs.infos}"
-   		ng-click="settingsIndexCtrl.activeTab('infos')">Infos</a> 
-   	<a 	class="modal__nav__tab modal__nav__tab--right"  
+   		ng-click="settingsIndexCtrl.activeTab('infos')">Infos</a>
+   	<a 	class="modal__nav__tab modal__nav__tab--right"
    		ng-class="{'modal__nav__tab--active': settingsIndexCtrl.tabs.display}"
-   		ng-click="settingsIndexCtrl.activeTab('display')">Icons & colors</a> 
+   		ng-click="settingsIndexCtrl.activeTab('display')">Icons & colors</a>
 </div>
-<div 	ng-if="settingsIndexCtrl.tabs.infos" 
+<div 	ng-if="settingsIndexCtrl.tabs.infos"
 		class="modal__content"
+        ng-class="{'modal__content--tools-off': (settingsIndexCtrl.kindsOfSession == 'managed')}"
 		active-infos="settingsIndexCtrl.infos"
 		check-change="settingsIndexCtrl.checkChanges"
+        is-readonly="settingsIndexCtrl.isReadonly"
 		trainer-sessions-customize-infos>
 </div>
 <div 	ng-if="settingsIndexCtrl.tabs.display" class="modal__content">
-	<div 
+	<div
 		class="modal__content__colors"
-		active-color="settingsIndexCtrl.infos.color" 
-		change="settingsIndexCtrl.changeColor" 
-		trainer-sessions-customize-colors>	
+		active-color="settingsIndexCtrl.infos.color"
+		change="settingsIndexCtrl.changeColor"
+		trainer-sessions-customize-colors>
 	</div>
-	<div 
+	<div
 		class="modal__content__icons"
-		active-icon="settingsIndexCtrl.infos.icon" 
+		active-icon="settingsIndexCtrl.infos.icon"
 		change="settingsIndexCtrl.changeIcon"
-		trainer-sessions-customize-icons >	
+		trainer-sessions-customize-icons >
 	</div>
 </div>
-<div class="modal__tools">
+<div class="modal__tools" ng-if="settingsIndexCtrl.kindsOfSession == 'managed'">
 	<p ng-if="settingsIndexCtrl.hasChanges.all" class="modal__tools__message"><i class="fa fa-warning"></i> Some changes aren't saved</p>
 	<a class="modal__tools__button button button--small button--success" ng-click="settingsIndexCtrl.save()">
    		<span class="button__label">Save change</span>
