- color & icons are now supporting readonly mode

--- a/src/app/private/trainer/settings/directives.tmpl/index.html
+++ b/src/app/private/trainer/settings/directives.tmpl/index.html
@@ -26,12 +26,14 @@
 		class="modal__content__colors"
 		active-color="settingsIndexCtrl.infos.color"
 		change="settingsIndexCtrl.changeColor"
+        is-readonly="settingsIndexCtrl.isReadonly"
 		trainer-sessions-customize-colors>
 	</div>
 	<div
 		class="modal__content__icons"
 		active-icon="settingsIndexCtrl.infos.icon"
 		change="settingsIndexCtrl.changeIcon"
+        is-readonly="settingsIndexCtrl.isReadonly"
 		trainer-sessions-customize-icons >
 	</div>
 </div>
