--- a/src/app/private/trainer/archives/directives.tmpl/index.html
+++ b/src/app/private/trainer/archives/directives.tmpl/index.html
@@ -9,6 +9,7 @@
 	class="modal__content modal__content--nav-off"
 	sessions="trainerArchivesIndexController.archives"
 	delete="trainerArchivesIndexController.deleteArchivedSession"
+	details="trainerArchivesIndexController.showSettings"
 	unarchive="trainerArchivesIndexController.unarchiveSession"
 	search="trainerArchivesIndexController.sfilter.search"
 	trainer-sessions-archives-list
