Remove Search Sync between current & archive

--- a/src/app/private/scenarist/archives/directives.tmpl/index.html
+++ b/src/app/private/scenarist/archives/directives.tmpl/index.html
@@ -10,9 +10,9 @@
 	scenarios="scenaristArchivesIndexCtrl.archives"
 	unarchive="scenaristArchivesIndexCtrl.unarchiveScenario"
 	delete="scenaristArchivesIndexCtrl.deleteArchivedScenario"
-	search="scenaristArchivesIndexCtrl.sfilter.search"
+	search="scenaristArchivesIndexCtrl.search"
 	scenarist-scenarios-archives-list>
 </div>
 <div class="modal__tools">
-	<input ng-model="scenaristArchivesIndexCtrl.sfilter.search" type="text" class="input input--small" placeholder="Search scenario" />
+	<input ng-model="scenaristArchivesIndexCtrl.search" type="text" class="input input--small" placeholder="Search scenario" />
 </div>
