--- a/src/app/private/trainer/archives/directives.tmpl/index.html
+++ b/src/app/private/trainer/archives/directives.tmpl/index.html
@@ -10,9 +10,9 @@
 	sessions="trainerArchivesIndexController.archives"
 	delete="trainerArchivesIndexController.deleteArchivedSession"
 	unarchive="trainerArchivesIndexController.unarchiveSession"
-	search="trainerArchivesIndexController.sfilter.search"
+	search="trainerArchivesIndexController.search"
 	trainer-sessions-archives-list
 ></div>
 <div class="modal__tools">
-	<input ng-model="trainerArchivesIndexController.sfilter.search" type="text" class="input input--small" placeholder="Search session" />
+	<input ng-model="trainerArchivesIndexController.search" type="text" class="input input--small" placeholder="Search session" />
 </div>
