--- a/src/app/private/trainer/settings/directives.tmpl/colors-picker.html
+++ b/src/app/private/trainer/settings/directives.tmpl/colors-picker.html
@@ -2,5 +2,5 @@
 	ng-repeat="color in colors"
 	ng-class="{true:'color--selected', false: ''}[color == activeColor]"
 	class="color illustration illustration--medium illustration--{{color}}"
-	ng-click="changeColor(color)">
+	ng-click="change(color)">
 </div>
