--- a/src/app/private/trainer/settings/directives.tmpl/index.html
+++ b/src/app/private/trainer/settings/directives.tmpl/index.html
@@ -1,6 +1,6 @@
 <div class="modal__header">
 	<div class="modal__illustration illustration illustration--medium illustration--icon" illustration="ICON_{{settingsIndexCtrl.infos.color}}_{{settingsIndexCtrl.infos.icon.key}}_{{settingsIndexCtrl.infos.icon.library}}"></div>
-	<h5 class="modal__title">{{settingsIndexCtrl.session.name | limitTo: settingsIndexCtrl.MAX_DISPLAYED_CHARS}}<span ng-if="settingsIndexCtrl.session.name.length > settingsIndexCtrl.MAX_DISPLAYED_CHARS">...</span> <span ng-if="settingsIndexCtrl.isReadonly">(READ ONLY)</span></h5>
+	<h5 class="modal__title">{{settingsIndexCtrl.session.name | limitTo: settingsIndexCtrl.MAX_DISPLAYED_CHARS}}<span ng-if="settingsIndexCtrl.session.name.length > settingsIndexCtrl.MAX_DISPLAYED_CHARS">...</span></h5>
 	<a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="close()">
    		<span class="button__label">Close</span>
 	</a>
@@ -15,10 +15,8 @@
 </div>
 <div 	ng-if="settingsIndexCtrl.tabs.infos"
 		class="modal__content"
-        ng-class="{'modal__content--tools-off': (settingsIndexCtrl.kindsOfSession != 'managed')}"
 		active-infos="settingsIndexCtrl.infos"
 		check-change="settingsIndexCtrl.checkChanges"
-        is-readonly="settingsIndexCtrl.isReadonly"
 		trainer-sessions-customize-infos>
 </div>
 <div 	ng-if="settingsIndexCtrl.tabs.display" class="modal__content">
@@ -26,18 +24,16 @@
 		class="modal__content__colors"
 		active-color="settingsIndexCtrl.infos.color"
 		change="settingsIndexCtrl.changeColor"
-        is-readonly="settingsIndexCtrl.isReadonly"
 		trainer-sessions-customize-colors>
 	</div>
 	<div
 		class="modal__content__icons"
 		active-icon="settingsIndexCtrl.infos.icon"
 		change="settingsIndexCtrl.changeIcon"
-        is-readonly="settingsIndexCtrl.isReadonly"
 		trainer-sessions-customize-icons >
 	</div>
 </div>
-<div class="modal__tools" ng-if="settingsIndexCtrl.kindsOfSession == 'managed'">
+<div class="modal__tools">
 	<p ng-if="settingsIndexCtrl.hasChanges.all" class="modal__tools__message"><i class="fa fa-warning"></i> Some changes aren't saved</p>
 	<a class="modal__tools__button button button--small button--success" ng-click="settingsIndexCtrl.save()">
    		<span class="button__label">Save change</span>
