- Add the ability to update session users if archived

--- a/src/app/private/trainer/archives/directives.tmpl/index.html
+++ b/src/app/private/trainer/archives/directives.tmpl/index.html
@@ -10,6 +10,7 @@
 	sessions="trainerArchivesIndexController.archives"
 	delete="trainerArchivesIndexController.deleteArchivedSession"
 	details="trainerArchivesIndexController.showSettings"
+	users="trainerArchivesIndexController.showUsers"
 	unarchive="trainerArchivesIndexController.unarchiveSession"
 	search="trainerArchivesIndexController.search"
 	trainer-sessions-archives-list
