--- a/src/app/private/trainer/archives/directives.tmpl/list.html
+++ b/src/app/private/trainer/archives/directives.tmpl/list.html
@@ -15,6 +15,15 @@
             <span class="button__label">Show settings</span>
         </a>
 
+        <a
+            class="button button--medium button--round button--default-reverse button--label-off button--user"
+            title="Show settings"
+            ng-click="users(session)">
+            <span class="button__label">Manage Users</span>
+        </a>
+
+
+
         <a class="button button--medium button--round button--default-reverse button--label-off button--undo" title="Move to current sessions" ng-click="unarchive(session)">
             <span class="button__label">Move to current sessions</span>
         </a>
