--- a/src/app/private/trainer/directives.tmpl/index.html
+++ b/src/app/private/trainer/directives.tmpl/index.html
@@ -16,7 +16,7 @@
 	</div>
 	<div 
 		ng-if="!trainerIndexCtrl.loading.all"
-		ng-class="{true:'view__list--with-archive', false:''}[trainerIndexCtrl.archives.length > 0]"
+		ng-class="{true:'view__list--with-archive', false:''}[trainerIndexCtrl.nbArchives > 0]"
 		class="view__list" 
 		sessions="trainerIndexCtrl.sessions" 
 		maximum="trainerIndexCtrl.maxSessionsDisplayed"
@@ -26,9 +26,9 @@
 		trainer-sessions-list 
 		repeat-auto-load >
 	</div>
-	<div ng-if="(!trainerIndexCtrl.loading.all) && (trainerIndexCtrl.archives.length)" class="view__archives">
+	<div ng-if="(!trainerIndexCtrl.loading.all) && (trainerIndexCtrl.nbArchives > 0)" class="view__archives">
 		<a class="button button--small button--default button--archive" ui-sref=".archives">
-			<span class="button__label">{{trainerIndexCtrl.archives.length}} &nbsp; archives</span>
+			<span class="button__label">{{trainerIndexCtrl.nbArchives}} &nbsp; archives</span>
 		</a>
 	</div>
 	<div 
