Player : Edit templates integrating Team model

--- a/src/app/private/player/directives.tmpl/index.html
+++ b/src/app/private/player/directives.tmpl/index.html
@@ -1,11 +1,11 @@
 <div 
 	class="view view--join-session view--bottom" 
-	check-token="playerSessionsCtrl.checkToken"
-	player-session-join-form >
+	check-token="playerCtrl.checkToken"
+	player-join-form >
 </div>
 <div 
 	class="view view--sessions-list view--middle"
-	sessions="playerSessionsCtrl.sessions"
-	leave="playerSessionsCtrl.leaveSession"
-	player-sessions-list >
+	teams="playerCtrl.teams"
+	leave="playerCtrl.leaveTeam"
+	player-teams-list >
 </div>
