--- a/src/app/private/player/team/team.tmpl.html
+++ b/src/app/private/player/team/team.tmpl.html
@@ -1,2 +1,2 @@
-<div class="modal modal--player-team" close="modalsCtrl.close()" player-session-team-index></div>
+<div class="modal modal--player-team" close="modalsCtrl.close()" player-team-index></div>
 <div class="shadow" ng-click="modalsCtrl.close()"></div>
