--- a/src/app/private/trainer/settings/directives.tmpl/infos-form.html
+++ b/src/app/private/trainer/settings/directives.tmpl/infos-form.html
@@ -5,8 +5,6 @@
 	<textarea ng-readonly="isReadonly" ng-model="activeInfos.comments" class="input input--small input--multi-lines" placeholder="Comment is optionnal"></textarea>
 </div>
 <div class="infos--secondary">
-	<label class="infos__label">Access key</label>
-	<input ng-readonly="isReadonly" ng-model="activeInfos.token" class="input input--small" type="text" placeholder="Access key without space is required" />
 	<label class="infos__label">Type</label>
 	<label class="choice">
 		<div class="choice__box">
@@ -22,5 +20,8 @@
 		</div>
 		<div class="choice__label">In team</div>
  	</label>
- 	<label class="infos__label">Scenario : {{activeInfos.scenario}}</label>
+	<label class="infos__label">Access key</label>
+	<input ng-readonly="isReadonly" ng-model="activeInfos.token" class="input input--small" type="text" placeholder="Access key without space is required" />
+	<label class="infos__label">guests or registered players can access the session following this link : <span class="tool tool--selectable" text-selectable>http://wegas.albasim.ch/#/play/{{activeInfos.token}}</span></label>
+ 	<label class="infos__label">Session based on scenario : {{activeInfos.scenario}}</label>
 </div>
