--- a/src/assets/sass/objects/_tool.scss
+++ b/src/assets/sass/objects/_tool.scss
@@ -139,5 +139,27 @@
 			}
 		}
 	}
+
+	&.tool--selectable{
+		display:block;
+		position:relative;
+
+		textarea {
+		    position: absolute;
+		    display:block;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+		    border: 0 none transparent;
+		    margin: 0;
+		    padding: 0;
+		    outline: none;
+		    resize: none;
+		    overflow: hidden;
+		    font-family: inherit;
+		    font-size: 1em;
+		}
+	}
  	
 }
