Trainer : Add Advanced Infos

--- a/src/app/private/scenarist/settings/directives.tmpl/index.html
+++ b/src/app/private/scenarist/settings/directives.tmpl/index.html
@@ -18,7 +18,7 @@
    		ng-click="settingsIndexCtrl.activeTab('display')">Icons & colors</a>
     <a  class="modal__nav__tab modal__nav__tab--right"
         ng-class="{'modal__nav__tab--active': settingsIndexCtrl.tabs.advanced}"
-        ng-click="settingsIndexCtrl.activeTab('advanced')"><i class="fa fa-exclamation-triangle"></i> Advanced</a>
+        ng-click="settingsIndexCtrl.activeTab('advanced')">Advanced</a>
 </div>
 
 
