Trainer : Fix Co-trainer Get

--- a/src/app/private/trainer/users/directives.tmpl/trainers-list.html
+++ b/src/app/private/trainer/users/directives.tmpl/trainers-list.html
@@ -4,7 +4,7 @@
 	    <div class="line line--primary">{{trainer.name}}</div>
 	</div>
 	<div class="card__actions">
-	    <a class="button button--small button--round button--danger-reverse button--label-off button--user-remove" title="Remove trainer"ng-click="remove(trainer.id)">
+	    <a class="button button--small button--round button--danger-reverse button--label-off button--user-remove" title="Remove trainer"ng-click="remove(trainer)">
 	    	<span class="button__label">Remove trainer</span>
 	    </a>
 	</div>
