--- a/src/assets/sass/objects/_tool.scss
+++ b/src/assets/sass/objects/_tool.scss
@@ -144,13 +144,14 @@
 		display:block;
 		position:relative;
 
-		textarea {
+		#text--selectable--tmp {
 		    position: absolute;
 		    display:block;
 		    top: 0;
 		    left: 0;
 		    width: 100%;
 		    height: 100%;
+		    background:none;
 		    border: 0 none transparent;
 		    margin: 0;
 		    padding: 0;
